--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <title>Reto Platzi</title>
 </head>
 <body>
+ <header class="header">
+    <img class="header__img"src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="">
+    <div class="header__menu">
+      <div class="header__menu__profile">
+        <img  class="header__menu__profile_image" src="image/icons8-nombre-100.png" alt="">
+        <p>Perfil</p>
+      </div>
+      <ul>
+        <li><a href="#">Cuenta</a> </li>
+        <li><a href="#">Salir</a></li>
+      </ul>
+    </div>
+  </header>
+ <section>
     
+ </section>
+ <footer>
+
+ </footer>
 </body>
 </html>
