[MOD][ADD]adicion de vista de login y ajustes de visualizaciones

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>Plazi Video</title>
 </head>
 <body>
-   
- <header class="header">
+<header class="header">
     <img class="header__img"src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png" alt="">
     <div class="header__menu">
       <div class="header__menu__profile">
@@ -22,127 +21,130 @@
         <li><a href="#">Salir</a></li>
       </ul>
     </div>
-  </header>
- <section class="buscador">
-   <div class="buscador__container">
-     <h2 class="buscador__container__h2">¿Que quires ver hoy?</h2>
-   </div>
-   <div class="buscador__container">
-     <input class="input"type="text" placeholder="Buscar">
-   </div>
- </section>
- <section class="carrusel">
-   
-   <div class="carrusel__title"><h2>Mi lista</h2></div>
-   <div class="carrusel__container scrollesp">
-      <div class="carrusel-item">
-        <img class="carrusel-item__image" src="image/image0.jpg" alt="">
-         <div class="carrusel-item__details">
-           <div class="carrusel-item__controls--container">
-            <div>
-              <img class="contrls__image" src="image/play.png" alt="">
-              <img class="contrls__image" src="image/add.png" alt="">
-            </div>
-            <div>
-              <p>The River</p>
-              <p>20154</p>
-            </div>
-           </div>
-         </div>
-      </div>
-      <div class="carrusel-item">
-          <img class="carrusel-item__image"  src="image/image1.jpg" alt="">
-          <div class="carrusel-item__details">
-            <div class="carrusel-item__controls--container">
-             <div>
-               <img class="contrls__image" src="image/play.png" alt="">
-               <img class="contrls__image" src="image/add.png" alt="">
-             </div>
-             <div>
-               <p>The City</p>
-               <p>20154</p>
-             </div>
-            </div>
+</header>
+  <article class="main">
+      <section class="buscador">
+          <div class="buscador__container">
+            <h2 class="buscador__container__h2">¿Que quires ver hoy?</h2>
           </div>
-      </div>
-      <div class="carrusel-item">
-          <img class="carrusel-item__image" src="image/image2.jpg" alt="">
-          <div class="carrusel-item__details">
-            <div class="carrusel-item__controls--container">
-             <div>
-               <img class="contrls__image" src="image/play.png" alt="">
-               <img class="contrls__image" src="image/add.png" alt="">
-             </div>
-             <div>
-               <p>Electro Music</p>
-               <p>20154</p>
-             </div>
-            </div>
+          <div class="buscador__container">
+            <input class="input"type="text" placeholder="Buscar">
           </div>
-      </div>
-      <div class="carrusel-item">
-          <img class="carrusel-item__image" src="image/image3.jpg" alt="">
-          <div class="carrusel-item__details">
-            <div class="carrusel-item__controls--container">
-             <div>
-               <img class="contrls__image" src="image/play.png" alt="">
-               <img class="contrls__image" src="image/add.png" alt="">
-             </div>
-             <div>
-               <p>The Building</p>
-               <p>20154</p>
-             </div>
-            </div>
-          </div>
-      </div>
-      <div class="carrusel-item">
-          <img class="carrusel-item__image" src="image/image4.jpg" alt="">
-          <div class="carrusel-item__details">
-            <div class="carrusel-item__controls--container">
-             <div>
-               <img class="contrls__image" src="image/play.png" alt="">
-               <img class="contrls__image" src="image/add.png" alt="">
-             </div>
-             <div>
-               <p>The Desert</p>
-               <p>20154</p>
-             </div>
-            </div>
-          </div>
-      </div>
-      <div class="carrusel-item">
-          <img class="carrusel-item__image"  src="image/image5.jpg" alt="">
-          <div class="carrusel-item__details">
-            <div class="carrusel-item__controls--container">
-             <div>
-               <img class="contrls__image" src="image/play.png" alt="">
-               <img class="contrls__image" src="image/add.png" alt="">
-             </div>
-             <div>
-               <p>The Architecture</p>
-               <p>20154</p>
-             </div>
-            </div>
-          </div>
-      </div>
-      <div class="carrusel-item">
-          <img class="carrusel-item__image" src="image/image6.jpg" alt="">
-          <div class="carrusel-item__details">
-            <div class="carrusel-item__controls--container">
-             <div>
-               <img class="contrls__image" src="image/play.png" alt="">
-               <img class="contrls__image" src="image/add.png" alt="">
-             </div>
-             <div>
-               <p>The Nature</p>
-               <p>20154</p>
-             </div>
-            </div>
-          </div>
-      </div>
-   </div>   
- </section>
- <footer>
+      </section>
+      <section class="carrusel">
+          <div class="carrusel__title"><h2>Mi lista</h2></div>
+          <div class="carrusel__container scrollesp">
+              <div class="carrusel-item">
+                <img class="carrusel-item__image" src="image/image0.jpg" alt="">
+                 <div class="carrusel-item__details">
+                   <div class="carrusel-item__controls--container">
+                    <div>
+                      <img class="contrls__image" src="image/play.png" alt="">
+                      <img class="contrls__image" src="image/add.png" alt="">
+                    </div>
+                    <div>
+                      <p>The River</p>
+                      <p>20154</p>
+                    </div>
+                   </div>
+                 </div>
+              </div>
+              <div class="carrusel-item">
+                  <img class="carrusel-item__image"  src="image/image1.jpg" alt="">
+                  <div class="carrusel-item__details">
+                    <div class="carrusel-item__controls--container">
+                     <div>
+                       <img class="contrls__image" src="image/play.png" alt="">
+                       <img class="contrls__image" src="image/add.png" alt="">
+                     </div>
+                     <div>
+                       <p>The City</p>
+                       <p>20154</p>
+                     </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carrusel-item">
+                  <img class="carrusel-item__image" src="image/image2.jpg" alt="">
+                  <div class="carrusel-item__details">
+                    <div class="carrusel-item__controls--container">
+                     <div>
+                       <img class="contrls__image" src="image/play.png" alt="">
+                       <img class="contrls__image" src="image/add.png" alt="">
+                     </div>
+                     <div>
+                       <p>Electro Music</p>
+                       <p>20154</p>
+                     </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carrusel-item">
+                  <img class="carrusel-item__image" src="image/image3.jpg" alt="">
+                  <div class="carrusel-item__details">
+                    <div class="carrusel-item__controls--container">
+                     <div>
+                       <img class="contrls__image" src="image/play.png" alt="">
+                       <img class="contrls__image" src="image/add.png" alt="">
+                     </div>
+                     <div>
+                       <p>The Building</p>
+                       <p>20154</p>
+                     </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carrusel-item">
+                  <img class="carrusel-item__image" src="image/image4.jpg" alt="">
+                  <div class="carrusel-item__details">
+                    <div class="carrusel-item__controls--container">
+                     <div>
+                       <img class="contrls__image" src="image/play.png" alt="">
+                       <img class="contrls__image" src="image/add.png" alt="">
+                     </div>
+                     <div>
+                       <p>The Desert</p>
+                       <p>20154</p>
+                     </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carrusel-item">
+                  <img class="carrusel-item__image"  src="image/image5.jpg" alt="">
+                  <div class="carrusel-item__details">
+                    <div class="carrusel-item__controls--container">
+                     <div>
+                       <img class="contrls__image" src="image/play.png" alt="">
+                       <img class="contrls__image" src="image/add.png" alt="">
+                     </div>
+                     <div>
+                       <p>The Architecture</p>
+                       <p>20154</p>
+                     </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carrusel-item">
+                  <img class="carrusel-item__image" src="image/image6.jpg" alt="">
+                  <div class="carrusel-item__details">
+                    <div class="carrusel-item__controls--container">
+                     <div>
+                       <img class="contrls__image" src="image/play.png" alt="">
+                       <img class="contrls__image" src="image/add.png" alt="">
+                     </div>
+                     <div>
+                       <p>The Nature</p>
+                       <p>20154</p>
+                     </div>
+                    </div>
+                  </div>
+              </div>
+              
+           </div>   
+      </section>
+  </article>
+ <footer class="footer">
+   dcfgds
  </footer>
 </body>
 </html>
